# nxdog-sdk

./: .gitignore  README.md
api/: __init__.py  nav_types.py
docs/: nxmap.md
docs/getting-started/: connect-to-dog.md
docs/integration/: example-backend.md  ros2-interfaces.md
docs/mapping/: mapping-quick-start-guide.md
docs/security-frontend/: output.md  security-frontend-user-guide.md
examples/backend/: README.md
examples/backend/http-api-server/: app.py  nxnav_client.py  platform_driver_client.py
interfaces/nxdog_interfaces/: CMakeLists.txt  package.xml
interfaces/nxdog_interfaces/srv/: SportCommand.srv
interfaces/nxnav_msgs/: CMakeLists.txt  package.xml
interfaces/nxnav_msgs/action/: ComputePath.action  ComputePrmPath.action  FollowPath.action  NavigateToPose.action  Recovery.action
interfaces/nxnav_msgs/msg/: MapData.msg  MapPath.msg  MapPose.msg  MapZone.msg  NavStatus.msg  RouteSegment.msg
interfaces/nxnav_msgs/srv/: ComputeRoute.srv  LoadMap.srv  SwitchMap.srv
