<?xml version="1.0"?>
<package format="3">
  <name>nxnav_msgs</name>
  <version>0.1.0</version>
  <description>Message, service, and action definitions for nxnav.</description>
  <maintainer email="dev@nexuni.com">nexuni</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
